--- a/landing.css
+++ b/landing.css
@@ -10,7 +10,7 @@
 }
 
 .mainpage {
-  background-color: #F5F7FA;
+  background-color: #f5f7fa;
   position: relative;
   width: 100%;
   height: 683px;
@@ -18,7 +18,7 @@
 }
 
 .navigation {
-  background-color: #F5F7FA;
+  background-color: #f5f7fa;
   box-shadow: 0 0 7px 0 #ced3da;
   padding: 25px 105px;
   height: 84px;
@@ -38,77 +38,74 @@
 
 .linksnav a {
   text-decoration: none;
-  color: #18191F;
+  color: #18191f;
   font-size: 16px;
   font-weight: bolder;
   line-height: 24px;
   margin-right: 50px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.navright a{
-text-decoration: none;
-color: #4CAF4F;
-background-color: inherit;
-padding: 10px 20px;
+.navright a {
+  text-decoration: none;
+  color: #4caf4f;
+  background-color: inherit;
+  padding: 10px 20px;
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
   text-align: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
 
 .navright .green {
   margin-left: 14px;
   border-radius: 6px;
-  background-color: #4CAF4F;
+  background-color: #4caf4f;
   /* border: 2px solid; */
   justify-content: center;
 }
 
 .navright .green .a {
-text-decoration: none;
-color: #ffffff;
-padding: 10px 20px;
+  text-decoration: none;
+  color: #ffffff;
+  padding: 10px 20px;
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
   text-align: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
-
 
 .sect1 {
   position: absolute;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: inherit; 
+  background-color: inherit;
   top: 161px;
   left: 144px;
 }
 
-.sectbox{
+.sectbox {
   margin-right: 104px;
   width: 657px;
-  height: 276px; 
+  height: 276px;
 }
 
-.sectbox h1{
+.sectbox h1 {
   font-size: 64px;
   font-weight: 600;
   line-height: 76px;
-  color: #4D4D4D;
+  color: #4d4d4d;
   font-family: sans-serif;
 }
 
-.sectbox #goat{
+.sectbox #goat {
   font-size: 64px;
   font-weight: 600;
   line-height: 76px;
-  color: #4CAF4F;
+  color: #4caf4f;
   font-family: sans-serif;
 }
 
@@ -125,7 +122,7 @@ padding: 10px 20px;
   text-decoration: none;
   padding: 14px 32px;
   border-radius: 6px;
-  background-color: #4CAF4F;
+  background-color: #4caf4f;
   font-size: 16px;
   font-weight: 500;
   font-family: sans-serif;
@@ -134,7 +131,7 @@ padding: 10px 20px;
   align-items: center;
 }
 
-.radio{
+.radio {
   position: absolute;
   border: 2px solid;
   top: 657px;
@@ -160,7 +157,7 @@ padding: 10px 20px;
   width: 20px;
   height: 20px;
   background-color: inherit;
-  border: 1px solid #4CAF4F;
+  border: 1px solid #4caf4f;
 }
 
 .radio input[type="radio"]:checked::before {
@@ -168,7 +165,7 @@ padding: 10px 20px;
   align-items: center;
   width: 11px;
   height: 11px;
-  background-color: #4CAF4F;
+  background-color: #4caf4f;
   border-radius: 50%;
   cursor: pointer;
   position: absolute;
@@ -183,7 +180,7 @@ padding: 10px 20px;
   background-color: inherit;
 } */
 
-.clients{
+.clients {
   width: 1110px;
   height: 78px;
   margin: auto;
@@ -191,17 +188,17 @@ padding: 10px 20px;
   align-items: center;
 }
 
-.clients h2{
+.clients h2 {
   font-size: 36px;
   font-weight: 600;
   font-family: sans-serif;
   line-height: 44px;
-  color: #4D4D4D;
+  color: #4d4d4d;
   align-items: center;
   margin-bottom: 8px;
 }
 
-.clients p{
+.clients p {
   font-size: 16px;
   font-weight: 400;
   font-family: sans-serif;
@@ -211,13 +208,15 @@ padding: 10px 20px;
 }
 
 .clients h2,
-.clients p, .manage h2, .manage p{
+.clients p,
+.manage h2,
+.manage p {
   text-align: center;
   align-items: center;
   justify-content: center;
 }
 
-.clientslogo{
+.clientslogo {
   width: 1152px;
   height: 98px;
   margin: auto;
@@ -226,11 +225,11 @@ padding: 10px 20px;
   justify-content: space-between;
 }
 
-.manage{
+.manage {
   margin-top: 40px;
 }
 
-.manage h2{
+.manage h2 {
   width: 542px;
   height: 88px;
   margin-left: auto;
@@ -239,12 +238,12 @@ padding: 10px 20px;
   font-weight: 600;
   font-family: sans-serif;
   line-height: 44px;
-  color: #4D4D4D;
+  color: #4d4d4d;
   align-items: center;
   margin-bottom: 8px;
 }
 
-.manage p{
+.manage p {
   font-size: 16px;
   font-weight: 400;
   font-family: sans-serif;
@@ -253,57 +252,65 @@ padding: 10px 20px;
   align-items: center;
 }
 
-.suitablerow{
+.suitablerow {
   /* border: 2px solid; */
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.organisations, .groups{
+.organisations,
+.groups {
   /* border: 2px solid; */
   margin: 10px 144px;
 }
 
-.organisations, .associations, .groups{
+.organisations,
+.associations,
+.groups {
   box-shadow: 0px 8px 8px 0px rgba(171, 190, 209, 0.2);
 }
 
-.organisations h3, .organisations p, .groups h3, .groups p{
+.organisations h3,
+.organisations p,
+.groups h3,
+.groups p {
   /* border: 2px solid; */
   text-align: center;
   align-items: center;
   justify-content: center;
 }
 
-.organisations img, .groups img{
+.organisations img,
+.groups img {
   position: relative;
   margin: 24px 117px 8px;
   /* border: 2px solid; */
 }
 
-.organisations h3{
+.organisations h3 {
   margin: 0px 16px 8px;
   font-size: 28px;
   font-weight: 700;
   font-family: sans-serif;
   line-height: 36px;
-  color: #4D4D4D;
+  color: #4d4d4d;
   align-items: center;
 }
 
-.groups h3{
+.groups h3 {
   margin: 0px 34px 8px;
   font-size: 28px;
   font-weight: 700;
   font-family: sans-serif;
   line-height: 36px;
-  color: #4D4D4D;
+  color: #4d4d4d;
   align-items: center;
 }
 
-.organisations p, .groups p{
-    margin: 0px 24px 24px;
+.organisations p,
+.groups p {
+  margin: 0px 24px 24px;
   font-size: 14px;
   font-weight: 400;
   font-family: sans-serif;
@@ -312,31 +319,32 @@ padding: 10px 20px;
   align-items: center;
 }
 
-.associations h3, .associations p{
+.associations h3,
+.associations p {
   /* border: 2px solid; */
   text-align: center;
   align-items: center;
   justify-content: center;
 }
 
-.associations img{
+.associations img {
   position: relative;
   margin: 24px 117px 8px;
   /* border: 2px solid; */
 }
 
-.associations h3{
+.associations h3 {
   margin: 0px 16px 8px;
   font-size: 28px;
   font-weight: 700;
   font-family: sans-serif;
   line-height: 36px;
-  color: #4D4D4D;
+  color: #4d4d4d;
   align-items: center;
 }
 
-.associations p{
-    margin: 0px 29.5px 24px;
+.associations p {
+  margin: 0px 29.5px 24px;
   font-size: 14px;
   font-weight: 400;
   font-family: sans-serif;
@@ -345,23 +353,23 @@ padding: 10px 20px;
   align-items: center;
 }
 
-.sect3{
+.sect3 {
   margin-top: 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.sect3img{
+.sect3img {
   margin-left: 144px;
 }
 
-.sect3img img{
+.sect3img img {
   margin-top: 52px;
   margin-bottom: 52px;
 }
 
-.text3{
+.text3 {
   width: 661px;
   height: 268px;
   margin-right: 144px;
@@ -373,7 +381,7 @@ padding: 10px 20px;
   font-weight: 600;
   font-family: sans-serif;
   line-height: 44px;
-  color: #4D4D4D;
+  color: #4d4d4d;
 }
 
 .text3 p {
@@ -392,7 +400,7 @@ padding: 10px 20px;
   text-decoration: none;
   padding: 14px 32px;
   border-radius: 6px;
-  background-color: #4CAF4F;
+  background-color: #4caf4f;
   font-size: 16px;
   font-weight: 500;
   font-family: sans-serif;
@@ -401,16 +409,16 @@ padding: 10px 20px;
   align-items: center;
 }
 
-.sect4{
+.sect4 {
   height: 288px;
   margin-top: 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #F5F7FA;
+  background-color: #f5f7fa;
 }
 
-.s4text{
+.s4text {
   width: 540px;
   height: 120px;
   margin-top: 84px;
@@ -418,34 +426,33 @@ padding: 10px 20px;
   margin-left: 144px;
 }
 
-
-.s4text h2{
+.s4text h2 {
   width: 408px;
   height: 88px;
   font-size: 36px;
   font-family: sans-serif;
   line-height: 44px;
   font-weight: 600;
-  color: #4D4D4D;
+  color: #4d4d4d;
 }
 
-.s4text h2 span{
+.s4text h2 span {
   font-size: 36px;
   font-family: sans-serif;
   line-height: 44px;
   font-weight: 600;
-  color: #4CAF4F;
+  color: #4caf4f;
 }
 
-.s4text p{
+.s4text p {
   font-size: 16px;
   font-family: sans-serif;
   line-height: 24px;
   font-weight: 400;
-  color: #18191F;
+  color: #18191f;
 }
 
-.s4img{
+.s4img {
   width: 540px;
   height: 160px;
   margin-top: 64px;
@@ -453,27 +460,31 @@ padding: 10px 20px;
   margin-right: 144px;
 }
 
-.s1img div, .s2img div{
+.s1img div,
+.s2img div {
   display: flex;
   /* border: 2px solid; */
   align-items: center;
   gap: 30px;
 }
 
-.mem, .clubs{
-position: relative;
-left: -16px;
+.mem,
+.clubs {
+  position: relative;
+  left: -16px;
 }
 
-.mem h3, .clubs h3{
+.mem h3,
+.clubs h3 {
   font-size: 28px;
   font-family: sans-serif;
   line-height: 36px;
   font-weight: 700;
-  color: #4D4D4D;
+  color: #4d4d4d;
 }
 
-.mem p, .clubs p{
+.mem p,
+.clubs p {
   font-size: 16px;
   font-family: sans-serif;
   line-height: 24px;
@@ -481,18 +492,18 @@ left: -16px;
   color: #717171;
 }
 
-.sect5{
+.sect5 {
   margin-top: 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.sect5img{
+.sect5img {
   margin-left: 144px;
 }
 
-.sect5text{
+.sect5text {
   width: 661px;
   height: 308px;
   margin-right: 144px;
@@ -504,7 +515,7 @@ left: -16px;
   font-weight: 600;
   font-family: sans-serif;
   line-height: 44px;
-  color: #4D4D4D;
+  color: #4d4d4d;
 }
 
 .sect5text p {
@@ -523,7 +534,7 @@ left: -16px;
   text-decoration: none;
   padding: 14px 32px;
   border-radius: 6px;
-  background-color: #4CAF4F;
+  background-color: #4caf4f;
   font-size: 16px;
   font-weight: 500;
   font-family: sans-serif;
@@ -532,8 +543,8 @@ left: -16px;
   align-items: center;
 }
 
-.sect6{
-  background-color: #F5F7FA;
+.sect6 {
+  background-color: #f5f7fa;
   height: 390px;
   display: flex;
   align-items: center;
@@ -541,13 +552,13 @@ left: -16px;
   margin-top: 48px;
 }
 
-.sect6img img{
+.sect6img img {
   margin-bottom: 32px;
   margin-top: 34px;
   margin-left: 144px;
 }
 
-.sect6text{
+.sect6text {
   width: 748px;
   height: 324px;
   margin-bottom: 33px;
@@ -566,16 +577,16 @@ left: -16px;
   color: #717171;
 }
 
-.smith{
+.smith {
   margin-top: 16px;
 }
 
-.smith h4{
+.smith h4 {
   font-size: 20px;
   font-weight: 600;
   font-family: sans-serif;
   line-height: 26px;
-  color: #4CAF4F;
+  color: #4caf4f;
 }
 
 .smith p {
@@ -583,46 +594,46 @@ left: -16px;
   font-weight: 400;
   font-family: sans-serif;
   line-height: 24px;
-  color: #89939E;
+  color: #89939e;
 }
 
-.customers6{
+.customers6 {
   display: flex;
-    align-items: center;
+  align-items: center;
   justify-content: space-between;
   height: 48px;
 }
 
-.cust6{
+.cust6 {
   display: flex;
   flex-direction: row;
   gap: 32px;
 }
 
-.custlink a{
+.custlink a {
   text-decoration: none;
   position: relative;
   left: 2px;
   bottom: 2px;
-font-size: 20px;
+  font-size: 20px;
   font-weight: 600;
   line-height: 28px;
   font-family: sans-serif;
-  color: #4CAF4F;
+  color: #4caf4f;
 }
 
-.custlink img{
+.custlink img {
   position: relative;
   top: 6px;
 }
 
-.sect7{
+.sect7 {
   margin-top: 48px;
   height: 506px;
   margin-bottom: 94.6px;
 }
 
-.marketing{
+.marketing {
   margin: auto;
   text-align: center;
   align-items: center;
@@ -632,16 +643,16 @@ font-size: 20px;
   margin-bottom: 16px;
 }
 
-.marketing h2{
+.marketing h2 {
   font-size: 36px;
   font-weight: 600;
   line-height: 44px;
   font-family: sans-serif;
-  color: #4D4D4D;
+  color: #4d4d4d;
   text-align: center;
 }
 
-.marketing p{
+.marketing p {
   margin: auto;
   font-size: 16px;
   font-weight: 400;
@@ -653,38 +664,40 @@ font-size: 20px;
   text-align: center;
 }
 
-.mark{
+.mark {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.mark1, .mark2, .mark3{
+.mark1,
+.mark2,
+.mark3 {
   position: relative;
 }
 
-.mark1{
+.mark1 {
   margin-left: 144px;
 }
 
-.mark3{
+.mark3 {
   margin-right: 144px;
 }
 
-.read{
-position: absolute;
-top: 190px;
-left: 25.5px;
-right: 25.5px;
-background-color: #F5F7FA;
-box-shadow: 0px 8px 16px 0px rgba(171, 190, 209, 0.4);
-width: 317px;
+.read {
+  position: absolute;
+  top: 190px;
+  left: 25.5px;
+  right: 25.5px;
+  background-color: #f5f7fa;
+  box-shadow: 0px 8px 16px 0px rgba(171, 190, 209, 0.4);
+  width: 317px;
   height: 176px;
   border-radius: 8px;
   padding: 16px;
 }
 
-.read h4{
+.read h4 {
   font-size: 20px;
   font-weight: 600;
   line-height: 28px;
@@ -695,17 +708,17 @@ width: 317px;
   text-align: center;
 }
 
-.read a{
+.read a {
   text-decoration: none;
   font-size: 20px;
   font-weight: 600;
   line-height: 28px;
   font-family: sans-serif;
-  color: #4CAF4F;
+  color: #4caf4f;
   text-align: center;
 }
 
-.read span{
+.read span {
   display: flex;
   margin-top: 16px;
   width: 285px;
@@ -714,31 +727,31 @@ width: 317px;
   justify-content: center;
 }
 
-.read span img{
+.read span img {
   position: relative;
-top: 6px;
+  top: 6px;
 }
 
 .footer {
-background-color: #F5F7FA;
+  background-color: #f5f7fa;
 }
 
-.foottext{
+.foottext {
   height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
 
-.foottext .texth1{
+.foottext .texth1 {
   width: 887px;
   height: 152px;
   position: relative;
   margin-left: auto;
   margin-right: auto;
-} 
+}
 
-.foottext h1{
+.foottext h1 {
   font-size: 64px;
   font-weight: 600;
   font-family: sans-serif;
@@ -752,7 +765,7 @@ background-color: #F5F7FA;
   text-decoration: none;
   padding: 14px 32px;
   border-radius: 6px;
-  background-color: #4CAF4F;
+  background-color: #4caf4f;
   font-size: 16px;
   font-weight: 500;
   font-family: sans-serif;
@@ -761,18 +774,18 @@ background-color: #F5F7FA;
   align-items: center;
 }
 
-.demolink{
+.demolink {
   position: relative;
   margin-right: auto;
   margin-left: auto;
 }
 
-.demolink img{
+.demolink img {
   position: relative;
   top: 3px;
 }
 
-.footcontain{
+.footcontain {
   height: 328px;
   background-color: #263238;
 }
@@ -782,7 +795,7 @@ background-color: #F5F7FA;
   justify-content: space-between;
 }
 
-.foot1{
+.foot1 {
   width: 350px;
   height: 190px;
   margin-top: 64px;
@@ -795,7 +808,7 @@ background-color: #F5F7FA;
   position: relative;
 }
 
-.copyright{
+.copyright {
   margin-top: 40px;
   margin-bottom: 40px;
 }
@@ -807,33 +820,33 @@ background-color: #F5F7FA;
   line-height: 20px;
   display: grid;
   gap: 8px;
-  color: #F5F7FA;
+  color: #f5f7fa;
 }
 
-.foot1img{
+.foot1img {
   width: 176px;
   display: flex;
   justify-content: space-between;
 }
 
 .foot2 {
-    width: 635px;
-    height: 200px;
-    margin-top: 64px;
-    margin-bottom: 64px;
+  width: 635px;
+  height: 200px;
+  margin-top: 64px;
+  margin-bottom: 64px;
   margin-right: 165px;
-    display: flex;
-    flex-direction: row; 
-    justify-content: space-between; 
-    gap: 30px; 
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 30px;
 }
 
 .foot2 > div {
-    display: flex;
-    flex-direction: column;
-    margin-right: 30px; 
-    width: 160px;
-    height: 200px;
+  display: flex;
+  flex-direction: column;
+  margin-right: 30px;
+  width: 160px;
+  height: 200px;
 }
 
 .foot2 h4 {
@@ -842,52 +855,51 @@ background-color: #F5F7FA;
   font-weight: 600;
   font-family: sans-serif;
   line-height: 28px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
-.foot2 a{
+.foot2 a {
   margin-bottom: 12px;
   text-decoration: none;
   font-size: 14px;
   font-weight: 00;
   font-family: sans-serif;
   line-height: 20px;
-  color: #F5F7FA;
+  color: #f5f7fa;
 }
 
 .foot2 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .stay .email-subscribe {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .stay input[type="email"] {
-    padding: 9px 117px 11px 12px;
-    width: 255px;
-    background-color: #717171;
-    border: 1px solid #717171;
-    border-radius: 8px;
-    outline: none;
-    flex-grow: 1;
+  padding: 9px 117px 11px 12px;
+  width: 255px;
+  background-color: #717171;
+  border: 1px solid #717171;
+  border-radius: 8px;
+  outline: none;
+  flex-grow: 1;
 }
 
-.stay input[type="email"]::placeholder{
-    color: #D9DBE1;
-    font-size: 14px;
-    line-height: 20px;
-    font-weight: 400;
-    font-family: sans-serif;
-    opacity: 1;
+.stay input[type="email"]::placeholder {
+  color: #d9dbe1;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  font-family: sans-serif;
+  opacity: 1;
 }
 
 .stay button {
-    background-color: inherit;
-    border: none;
-    cursor: pointer;
-    position: relative;
-    right: 33px;
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  right: 33px;
 }
-
